day 13 added some changes

--- a/day 13/contact.html
+++ b/day 13/contact.html
@@ -48,13 +48,7 @@
           <article class="contact-info">
             <h3>Want To Get In Touch?</h3>
             <p>
-              Four dollar toast biodiesel plaid salvia actually pickled banjo
-              bespoke mlkshk intelligentsia edison bulb synth.
-            </p>
-            <p>Cardigan prism bicycle rights put a bird on it deep v.</p>
-            <p>
-              Hashtag swag health goth air plant, raclette listicle fingerstache
-              cold-pressed fanny pack bicycle rights cardigan poke.
+              To initiate contact with our Chief, kindly direct your inquiries at janureceipes526@gmail.com. Whether it's regarding partnerships, inquiries, or opportunities, we appreciate your interest and are eager to explore potential collaborations. Your communication is important to us, and we assure you of a prompt and thoughtful response. Thank you for considering . We look forward to the prospect of connecting and working together for mutual success.
             </p>
           </article>
           <article>
