--- a/day 13/index.html
+++ b/day 13/index.html
@@ -59,10 +59,10 @@
         <div class="tags-container">
           <h4>recipes</h4>
           <div class="tags-list">
-            <a href="tag-template.html">Beef (1)</a>
-            <a href="tag-template.html">Breakfast (2)</a>
-            <a href="tag-template.html">Carrots (3)</a>
-            <a href="tag-template.html">Food (4)</a>
+            <a href="tag-template.html">NoN-veg</a>
+            <a href="tag-template.html">Veg</a>
+            <a href="tag-template.html">Fish </a>
+            <a href="tag-template.html">Soups</a>
           </div>
         </div>
         <!-- end of tag container -->
@@ -75,41 +75,86 @@
               class="img recipe-img"
               alt=""
             />
-            <h5>Carne Asada</h5>
-            <p>Prep : 15min | Cook : 5min</p>
+            <h5>Chicken Biryani</h5>
+            <p>Prep : 15min | Cook : 45min</p>
           </a>
           <!-- end of single recipe -->
           <!-- single recipe -->
-          <a href="single-recipe.html" class="recipe">
+          <a href="recipe2.html" class="recipe">
             <img
               src="recipe-2.jpeg"
               class="img recipe-img"
               alt=""
             />
-            <h5>Greek Ribs</h5>
-            <p>Prep : 15min | Cook : 5min</p>
+            <h5>Chicken Curry</h5>
+            <p>Prep : 15min | Cook : 30min</p>
           </a>
           <!-- end of single recipe -->
           <!-- single recipe -->
-          <a href="single-recipe.html" class="recipe">
+          <a href="resipe3.html" class="recipe">
             <img
               src="recipe-3.jpeg"
               class="img recipe-img"
               alt=""
             />
-            <h5>Vegetable Soup</h5>
+            <h5>VSpicy Grilled Shrimp</h5>
             <p>Prep : 15min | Cook : 5min</p>
           </a>
           <!-- end of single recipe -->
           <!-- single recipe -->
-          <a href="single-recipe.html" class="recipe">
+          <a href="recipe4.html" class="recipe">
             <img
               src="recipe-4.jpeg"
               class="img recipe-img"
               alt=""
             />
-            <h5>Banana Pancakes</h5>
-            <p>Prep : 15min | Cook : 5min</p>
+            <h5>Vegetable Stir-Fry</h5>
+            <p>Prep : 25min | Cook : 45min</p>
+          </a>
+          <a href="recip5.html" class="recipe">
+            <img
+              src="recipe-5.jpeg"
+              class="img recipe-img"
+              alt=""
+            />
+            <h5>Spinach and Chickpea Curry</h5>
+            <p>Prep : 25min | Cook : 45min</p>
+          </a>
+          <a href="rec6.html" class="recipe">
+            <img
+              src="recipe-6.jpeg"
+              class="img recipe-img"
+              alt=""
+            />
+            <h5>Pasta Primavera</h5>
+            <p>Prep : 25min | Cook : 45min</p>
+          </a>
+          <a href="single-recipe.html" class="recipe">
+            <img
+              src="recipe-7.jpeg"
+              class="img recipe-img"
+              alt=""
+            />
+            <h5>Quinoa Salad</h5>
+            <p>Prep : 25min | Cook : 45min</p>
+          </a>
+          <a href="re8.html" class="recipe">
+            <img
+              src="recipe-8.jpeg"
+              class="img recipe-img"
+              alt=""
+            />
+            <h5>Lentil Soup</h5>
+            <p>Prep : 25min | Cook : 45min</p>
+          </a>
+          <a href="re9.html" class="recipe">
+            <img
+              src="recipe-9.jpeg"
+              class="img recipe-img"
+              alt=""
+            />
+            <h5>lentin soup pic</h5>
+            <p>Prep : 25min | Cook : 45min</p>
           </a>
           <!-- end of single recipe -->
         </div>
