--- a/day 13/re7.html
+++ b/day 13/re7.html
@@ -47,14 +47,13 @@
       <div class="recipe-page">
         <section class="recipe-hero">
           <img
-            src="recipe-1.jpeg"
+            src="recipe-7.jpeg"
             class="img recipe-hero-img"
           />
           <article class="recipe-info">
-            <h2>Chicken Biryani</h2>
+            <h2>Pasta Primavera</h2>
             <p>
-              Chicken Biryani, a delectable South Asian dish, harmoniously blends fragrant basmati rice, succulent chicken pieces, and aromatic spices. Marinated chicken, slow-cooked to perfection, intertwines with seasoned rice, creating a symphony of flavors. Infused with saffron, fried onions, and mint, each bite offers a tantalizing medley of tastes. This iconic dish, celebrated for its richness and complexity, reflects the culinary diversity of the region. Served with raita or a side salad, Chicken Biryani stands as a timeless favorite, enticing palates with its spicy allure and satisfying textures.
-            </p>
+                Pasta Primavera is a celebration of vibrant, seasonal vegetables harmoniously tossed with al dente pasta. Bursting with colors and flavors, this dish typically features an array of veggies like cherry tomatoes, bell peppers, zucchini, and broccoli, sautéed to perfection. The medley is then combined with a light, herb-infused sauce, creating a refreshing and wholesome pasta experience. Whether enjoyed as a vegetarian delight or paired with grilled chicken or shrimp, Pasta Primavera is a delightful ode to the freshness of the garden on a plate.</p>
             <div class="recipe-icons">
               <article>
                 <i class="fas fa-clock"></i>
@@ -91,29 +90,11 @@
                 <div></div>
               </header>
               <p>
-                1. Wash the basmati rice in cold water until the water runs clear. Soak the rice in water for 30 minutes, then drain.</p>
-
-<p>2. In a large pot, bring 4 cups of water to a boil. Add soaked and drained rice, 1 teaspoon of salt, and cook until the rice is 70-80% cooked. Drain and set aside.</p>
-<p>
-3. Heat oil or ghee in a heavy-bottomed pan. Add sliced onions and fry until golden brown. Remove half of the fried onions for later use.</p>
-
-<p>4. Add chicken pieces to the remaining onions in the pan. Cook until the chicken is browned.</p>
-
-<p>5. Add ginger-garlic paste, chopped tomatoes, biryani masala, turmeric powder, red chili powder, and salt. Cook until the tomatoes are soft and the oil starts to separate.</p>
-
-<p>6. Stir in yogurt, mint leaves, and coriander leaves. Cook for another 5 minutes.</p>
-
-<p>7. In a separate small pan, heat 2 tablespoons of oil. Add all the biryani masala ingredients and fry until fragrant. Add this mixture to the chicken curry.</p>
-
-<p>8. Preheat your oven to 350°F (180°C).</p>
-
-<p>9. In a deep ovenproof dish, layer half of the partially cooked rice, followed by the chicken curry. Top with the remaining rice.</p>
-
-<p>10. Sprinkle the reserved fried onions on top. Cover the dish tightly with aluminum foil or a lid.</p>
-
-<p>11. Bake in the preheated oven for 25-30 minutes to allow the flavors to meld and the rice to cook completely.</p>
-
-<p>12. Serve the delicious chicken biryani hot with raita or a side salad.</p>
+                Cook pasta according to package instructions. Drain and set aside.
+                In a pan, heat olive oil. Add garlic and sauté until fragrant.
+                Add mixed vegetables and sauté until they are tender-crisp.
+                Toss in cooked pasta, Parmesan cheese, salt, and pepper. Mix well.
+                Garnish with fresh basil and serve..</p>
               </p>
             </div>
             <!-- end of single instruction -->
@@ -124,20 +105,13 @@
           <article class="second-column">
             <div>
               <h4>ingredients</h4>
-              <p class="single-ingredient">- 2 cups basmati rice<br>
-                - 500g chicken, cut into pieces<br>
-                - 1 cup yogurt<br>
-                - 2 large onions, thinly sliced<br>
-                - 3 tomatoes, chopped<br>
-                - 1/4 cup cooking oil or ghee<br>
-                - 2 tablespoons biryani masala<br>
-                - 1 tablespoon ginger-garlic paste<br>
-                - 1/2 cup chopped mint leaves<br>
-                - 1/2 cup chopped coriander leaves<br>
-                - 4 cups water<br>
-                - 1 teaspoon turmeric powder<br>
-                - 1 teaspoon red chili powder<br>
-                - Salt to tast</p>
+              <p class="single-ingredient">- 2 cups mixed vegetables (zucchini, cherry tomatoes, bell peppers, carrots), sliced<br>
+                250g pasta<br>
+                1/4 cup olive oil<br>
+                2 cloves garlic, minced<br>
+                1/2 cup grated Parmesan cheese<br>
+                Salt and pepper to taste<br>
+                Fresh basil for garnish</p>
                           </div>
             <div>
               
