--- a/day 13/re9.html
+++ b/day 13/re9.html
@@ -47,14 +47,13 @@
       <div class="recipe-page">
         <section class="recipe-hero">
           <img
-            src="recipe-1.jpeg"
+            src="recipe-9.jpeg"
             class="img recipe-hero-img"
           />
           <article class="recipe-info">
-            <h2>Chicken Biryani</h2>
+            <h2>Lentil Soup</h2>
             <p>
-              Chicken Biryani, a delectable South Asian dish, harmoniously blends fragrant basmati rice, succulent chicken pieces, and aromatic spices. Marinated chicken, slow-cooked to perfection, intertwines with seasoned rice, creating a symphony of flavors. Infused with saffron, fried onions, and mint, each bite offers a tantalizing medley of tastes. This iconic dish, celebrated for its richness and complexity, reflects the culinary diversity of the region. Served with raita or a side salad, Chicken Biryani stands as a timeless favorite, enticing palates with its spicy allure and satisfying textures.
-            </p>
+                Lentil Soup is a comforting bowl of warmth and nourishment, showcasing the humble yet nutritious lentil. Simmered with aromatic vegetables like carrots, onions, and celery, along with savory herbs and spices, it delivers a robust flavor profile. The lentils add a hearty texture, while the broth becomes a savory elixir. Whether enjoyed as a hearty standalone meal or a cozy starter, Lentil Soup embodies simplicity and wholesomeness, making it a timeless and satisfying choice for those seeking a bowl of comfort.</p>
             <div class="recipe-icons">
               <article>
                 <i class="fas fa-clock"></i>
@@ -91,29 +90,10 @@
                 <div></div>
               </header>
               <p>
-                1. Wash the basmati rice in cold water until the water runs clear. Soak the rice in water for 30 minutes, then drain.</p>
-
-<p>2. In a large pot, bring 4 cups of water to a boil. Add soaked and drained rice, 1 teaspoon of salt, and cook until the rice is 70-80% cooked. Drain and set aside.</p>
-<p>
-3. Heat oil or ghee in a heavy-bottomed pan. Add sliced onions and fry until golden brown. Remove half of the fried onions for later use.</p>
-
-<p>4. Add chicken pieces to the remaining onions in the pan. Cook until the chicken is browned.</p>
-
-<p>5. Add ginger-garlic paste, chopped tomatoes, biryani masala, turmeric powder, red chili powder, and salt. Cook until the tomatoes are soft and the oil starts to separate.</p>
-
-<p>6. Stir in yogurt, mint leaves, and coriander leaves. Cook for another 5 minutes.</p>
-
-<p>7. In a separate small pan, heat 2 tablespoons of oil. Add all the biryani masala ingredients and fry until fragrant. Add this mixture to the chicken curry.</p>
-
-<p>8. Preheat your oven to 350°F (180°C).</p>
-
-<p>9. In a deep ovenproof dish, layer half of the partially cooked rice, followed by the chicken curry. Top with the remaining rice.</p>
-
-<p>10. Sprinkle the reserved fried onions on top. Cover the dish tightly with aluminum foil or a lid.</p>
-
-<p>11. Bake in the preheated oven for 25-30 minutes to allow the flavors to meld and the rice to cook completely.</p>
-
-<p>12. Serve the delicious chicken biryani hot with raita or a side salad.</p>
+                In a large pot, combine lentils, onion, carrots, celery, garlic, diced tomatoes, vegetable broth, cumin, paprika, salt, and pepper.
+Bring to a boil, then reduce heat and simmer for about 25-30 minutes until lentils are tender.
+Garnish with fresh cilantro and serve hot.
+These vegetarian recipes are not only simple but also full of flavor. Enjoy adding them to your recipe app</p>
               </p>
             </div>
             <!-- end of single instruction -->
@@ -124,20 +104,27 @@
           <article class="second-column">
             <div>
               <h4>ingredients</h4>
-              <p class="single-ingredient">- 2 cups basmati rice<br>
-                - 500g chicken, cut into pieces<br>
-                - 1 cup yogurt<br>
-                - 2 large onions, thinly sliced<br>
-                - 3 tomatoes, chopped<br>
-                - 1/4 cup cooking oil or ghee<br>
-                - 2 tablespoons biryani masala<br>
-                - 1 tablespoon ginger-garlic paste<br>
-                - 1/2 cup chopped mint leaves<br>
-                - 1/2 cup chopped coriander leaves<br>
-                - 4 cups water<br>
-                - 1 teaspoon turmeric powder<br>
-                - 1 teaspoon red chili powder<br>
-                - Salt to tast</p>
+              <p class="single-ingredient">- 1 cup dried lentils, rinsed<br>
+
+                1 onion, chopped<br>
+
+                2 carrots, chopped<br>
+
+                2 celery stalks, chopped<br>
+
+                3 cloves garlic, minced<br>
+
+                1 can (14 oz) diced tomatoes<br>
+
+                6 cups vegetable broth<br>
+
+                1 teaspoon cumin<br>
+
+                1 teaspoon paprika<br>
+
+                Salt and pepper to taste<br>
+
+                Fresh cilantro for garnish</p>
                           </div>
             <div>
               
