--- a/day 13/recipe4.html
+++ b/day 13/recipe4.html
@@ -47,14 +47,13 @@
       <div class="recipe-page">
         <section class="recipe-hero">
           <img
-            src="recipe-1.jpeg"
+            src="recipe-4.jpeg"
             class="img recipe-hero-img"
           />
           <article class="recipe-info">
-            <h2>Chicken Biryani</h2>
+            <h2>Fish Tacos</h2>
             <p>
-              Chicken Biryani, a delectable South Asian dish, harmoniously blends fragrant basmati rice, succulent chicken pieces, and aromatic spices. Marinated chicken, slow-cooked to perfection, intertwines with seasoned rice, creating a symphony of flavors. Infused with saffron, fried onions, and mint, each bite offers a tantalizing medley of tastes. This iconic dish, celebrated for its richness and complexity, reflects the culinary diversity of the region. Served with raita or a side salad, Chicken Biryani stands as a timeless favorite, enticing palates with its spicy allure and satisfying textures.
-            </p>
+                Fish Tacos, a culinary delight, combine the freshest catch with vibrant flavors. Succulent, grilled fish nestled in warm tortillas, adorned with crisp cabbage, zesty salsa, and a drizzle of creamy sauce. Each bite is a symphony of textures and tastes, from the tender fish to the crunch of fresh veggies. Whether enjoyed by the seaside or savored inland, Fish Tacos offer a taste of coastal bliss, bringing together the essence of the ocean and the zest of Mexican-inspired cuisine. </p>
             <div class="recipe-icons">
               <article>
                 <i class="fas fa-clock"></i>
@@ -91,29 +90,11 @@
                 <div></div>
               </header>
               <p>
-                1. Wash the basmati rice in cold water until the water runs clear. Soak the rice in water for 30 minutes, then drain.</p>
-
-<p>2. In a large pot, bring 4 cups of water to a boil. Add soaked and drained rice, 1 teaspoon of salt, and cook until the rice is 70-80% cooked. Drain and set aside.</p>
-<p>
-3. Heat oil or ghee in a heavy-bottomed pan. Add sliced onions and fry until golden brown. Remove half of the fried onions for later use.</p>
-
-<p>4. Add chicken pieces to the remaining onions in the pan. Cook until the chicken is browned.</p>
-
-<p>5. Add ginger-garlic paste, chopped tomatoes, biryani masala, turmeric powder, red chili powder, and salt. Cook until the tomatoes are soft and the oil starts to separate.</p>
-
-<p>6. Stir in yogurt, mint leaves, and coriander leaves. Cook for another 5 minutes.</p>
-
-<p>7. In a separate small pan, heat 2 tablespoons of oil. Add all the biryani masala ingredients and fry until fragrant. Add this mixture to the chicken curry.</p>
-
-<p>8. Preheat your oven to 350°F (180°C).</p>
-
-<p>9. In a deep ovenproof dish, layer half of the partially cooked rice, followed by the chicken curry. Top with the remaining rice.</p>
-
-<p>10. Sprinkle the reserved fried onions on top. Cover the dish tightly with aluminum foil or a lid.</p>
-
-<p>11. Bake in the preheated oven for 25-30 minutes to allow the flavors to meld and the rice to cook completely.</p>
-
-<p>12. Serve the delicious chicken biryani hot with raita or a side salad.</p>
+                Season fish fillets with chili powder, cumin, salt, and pepper.
+Grill or pan-fry the fish until cooked through.
+In a bowl, mix shredded cabbage with mayonnaise and lime juice to create slaw.
+Warm tortillas and assemble tacos with fish and slaw.
+Feel free to add these recipes to your recipe app, and enjoy the delightful flavors.</p>
               </p>
             </div>
             <!-- end of single instruction -->
@@ -124,20 +105,14 @@
           <article class="second-column">
             <div>
               <h4>ingredients</h4>
-              <p class="single-ingredient">- 2 cups basmati rice<br>
-                - 500g chicken, cut into pieces<br>
-                - 1 cup yogurt<br>
-                - 2 large onions, thinly sliced<br>
-                - 3 tomatoes, chopped<br>
-                - 1/4 cup cooking oil or ghee<br>
-                - 2 tablespoons biryani masala<br>
-                - 1 tablespoon ginger-garlic paste<br>
-                - 1/2 cup chopped mint leaves<br>
-                - 1/2 cup chopped coriander leaves<br>
-                - 4 cups water<br>
-                - 1 teaspoon turmeric powder<br>
-                - 1 teaspoon red chili powder<br>
-                - Salt to tast</p>
+              <p class="single-ingredient">- 500g white fish fillets<br>
+                1 cup shredded cabbage<br>
+                1/2 cup mayonnaise<br>
+                1 tablespoon lime juice<br>
+                1 teaspoon chili powder<br>
+                1 teaspoon cumin<br>
+                Salt and pepper to taste<br>
+                Flour tortillas</p>
                           </div>
             <div>
               
