--- a/day 13/tags.html
+++ b/day 13/tags.html
@@ -46,33 +46,30 @@
          <section class="tags-wrapper">
           <!-- single tag -->
               <a href="tag-template.html" class="tag">
-                <h5>beef</h5>
-                <p>1 recipe</p>
+                <h5>Non-veg</h5>
+                <p> recipes</p>
               </a>
             <!-- end of single tag -->
           <!-- single tag -->
               <a href="tag-template.html" class="tag">
-                <h5>breakfast</h5>
-                <p>2 recipe</p>
+                <h5>Veg</h5>
+                <p> recipes</p>
               </a>
             <!-- end of single tag -->
           <!-- single tag -->
               <a href="tag-template.html" class="tag">
-                <h5>carrots</h5>
-                <p>3 recipe</p>
+                <h5>Fish</h5>
+                <p> recipes</p>
               </a>
             <!-- end of single tag -->
           <!-- single tag -->
               <a href="tag-template.html" class="tag">
-                <h5>dinner</h5>
+                <h5>Soups</h5>
                 <p>4 recipe</p>
               </a>
             <!-- end of single tag -->
           <!-- single tag -->
-              <a href="tag-template.html" class="tag">
-                <h5>food</h5>
-                <p>1 recipe</p>
-              </a>
+              
             <!-- end of single tag -->
         </section>
     </main>
