--- a/day 13/recipes.html
+++ b/day 13/recipes.html
@@ -50,10 +50,10 @@
         <div class="tags-container">
           <h4>recipes</h4>
           <div class="tags-list">
-            <a href="tag-template.html">Beef (1)</a>
-            <a href="tag-template.html">Breakfast (2)</a>
-            <a href="tag-template.html">Carrots (3)</a>
-            <a href="tag-template.html">Food (4)</a>
+            <a href="tag-template.html">Non-veg</a>
+            <a href="tag-template.html">Veg </a>
+            <a href="tag-template.html">Fish</a>
+            <a href="tag-template.html">Soups</a>
           </div>
         </div>
         <!-- end of tag container -->
