day 13 added some changes

--- a/day 13/index.html
+++ b/day 13/index.html
@@ -48,8 +48,8 @@
       <header class="hero">
         <div class="hero-container">
           <div class="hero-text">
-            <h1>jannu recipes</h1>
-            <h4>no fluff, just recipes</h4>
+            <h1>Jannu Home made recipes</h1>
+            <h4>Tasty Recipes,Happy TUmmy</h4>
           </div>
         </div>
       </header>
