--- a/day 20/index.html
+++ b/day 20/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="div32">
             <img src="developer2.jpg" width="180px" height="200" style="border-radius: 50%;">
-            <h2> karthik </h2>
+            <h2> Jannu</h2>
             <h3>Python Developer</h3>
             <span style="color: orangered;" class="fa fa-star checked"></span>
             <span style="color: orangered;"class="fa fa-star checked"></span>
@@ -57,7 +57,7 @@
         </div>
         <div class="div33">
             <img src="developer3.jpg" width="180px" height="200" style="border-radius: 50%;">
-            <h2>jannu</h2>
+            <h2>Nani</h2>
             <h3>AI Developer</h3>
             <span style="color: orangered;" class="fa fa-star checked"></span>
             <span style="color: orangered;"class="fa fa-star checked"></span>
